--- a/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
@@ -384,7 +384,11 @@ doh_k12_2012_in$district_code <- apply(doh_k12_2012_in[,c("school_code"), drop =
 #insert district code 2013
 doh_k12_2013$district_code <- apply(doh_k12_2013[,c("school_code"), drop = F],1, function(x) {final_codeframe$district_code[final_codeframe$school_code == x]})
 
-str(doh_k12_2012_in)
+#insert placeholders into WA Doh 2012 out
+doh_k12_2012_out$school_zip <- "8675309"
+doh_k12_2012_out$school_city <- "placeholder"
+doh_k12_2012_out$district_code <- 8675309
+
 
 ```
 ####Note on handling numeric(0), character(0), and 8675309 placeholder####
