--- a/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
@@ -421,8 +421,8 @@ rm(final_codeframe_subset2012)
 WA_DOH_combined$school_zip <- sapply(strsplit(WA_DOH_combined$school_zip,split = "-"),"[",1)
 
 #subset rows with and without 8675309 district code placeholder
-WA_DOH_combined_8675309_dcode <- subset(WA_DOH_codeframe, district_code == 8675309)
-WA_DOH_combined <- subset(WA_DOH_codeframe, district_code != 8675309)
+#WA_DOH_combined_8675309_dcode <- subset(WA_DOH_codeframe, district_code == 8675309)
+#WA_DOH_combined <- subset(WA_DOH_codeframe, district_code != 8675309)
 
 
 
