--- a/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
@@ -442,6 +442,7 @@ district_codeframe <- district_codeframe[!duplicated(district_codeframe$school_d
 #complete fill in of district code
 WA_DOH_combined_8675309_dcode$district_code <- apply(WA_DOH_combined_8675309_dcode[,c("school_district"), drop = F],1, function(x) {district_codeframe$district_code[district_codeframe$school_district == x]})
 #rbind to combined DF
+WA_DOH_combined <- rbind(WA_DOH_combined,WA_DOH_combined_8675309_dcode)
 ```
 
 ###Tidy the combined DF###
