--- a/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
@@ -446,8 +446,10 @@ WA_DOH_combined <- rbind(WA_DOH_combined,WA_DOH_combined_8675309_dcode)
 rm(WA_DOH_combined_8675309_dcode)
 
 
-#change filed name of exempt to total_exemptions, to avoid confusion
+#change fied name of exempt to total_exemptions, to avoid confusion
 names(WA_DOH_combined)[14] <- "total_exemptions"
+#rename year column to school_year
+names(WA_DOH_combined)[1] <- "school_year"
 ```
 
 
@@ -482,9 +484,17 @@ summary(WA_DOH_combined)
 ```{r convert classes of combined}
 #convert categorical variables to factors
 WA_DOH_combined$school_type <- as.factor(WA_DOH_combined$school_type)
-WA_DOH_combined$year <- as.factor(WA_DOH_combined$year)
+WA_DOH_combined$year <- as.factor(WA_DOH_combined$school_year)
 WA_DOH_combined$reported <- as.factor(WA_DOH_combined$reported)
 ```
+
+###Re-order Columns###
+Reorder columns so that columns in a way that makes the data frame easier to understand.
+
+```{r reorder columns}
+names(WA_DOH_combined)
+```
+
 ###Tidy the combined DF###
 
 ```{r tidy combined DF}
