--- a/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
@@ -488,12 +488,6 @@ WA_DOH_combined$year <- as.factor(WA_DOH_combined$school_year)
 WA_DOH_combined$reported <- as.factor(WA_DOH_combined$reported)
 ```
 
-###Re-order Columns###
-Reorder columns so that columns in a way that makes the data frame easier to understand.
-
-```{r reorder columns}
-names(WA_DOH_combined)
-```
 
 ###Tidy the combined DF###
 
@@ -503,4 +497,6 @@ WA_DOH_tidy <- gather(WA_DOH_combined,exemption_type,exemptions,medical_exempt, 
 
 #add percent by exemption type
 WA_DOH_tidy$percent_exemption_type <- round((WA_DOH_tidy$total_exemptions/WA_DOH_tidy$enrolled)*100,digits = 2)
+
+names(WA_DOH_tidy)
 ```
